@@ -1,7 +1,8 @@
 <RCC>
     <qresource prefix="/">
         <file>schema/schema.sql</file>
-	<file>schema/schema-1.sql</file>
+        <file>schema/schema-1.sql</file>
+        <file>schema/schema-2.sql</file>
         <file>schema/device-schema.sql</file>
         <file>style/strawberry.css</file>
         <file>misc/playing_tooltip.txt</file>
