@@ -26,7 +26,7 @@ message SongMetadata {
   }
 
   optional bool valid = 1;
-  
+
   optional string title = 2;
   optional string album = 3;
   optional string artist = 4;
@@ -41,26 +41,27 @@ message SongMetadata {
   optional string performer = 13;
   optional string grouping = 14;
   optional string comment = 15;
-  
-  optional uint64 length_nanosec = 16;
-  
-  optional int32 bitrate = 17;
-  optional int32 samplerate = 18;
-  optional int32 bitdepth = 19;
+  optional string lyrics = 16;
 
-  optional string url = 20;
-  optional string basefilename = 21;
-  optional Type filetype = 22;
-  optional int32 filesize = 23;
-  optional int32 mtime = 24;
-  optional int32 ctime = 25;
+  optional uint64 length_nanosec = 17;
 
-  optional int32 playcount = 26;
-  optional int32 skipcount = 27;
-  optional int32 lastplayed = 28;
+  optional int32 bitrate = 18;
+  optional int32 samplerate = 19;
+  optional int32 bitdepth = 20;
 
-  optional bool suspicious_tags = 29;
-  optional string art_automatic = 30;
+  optional string url = 21;
+  optional string basefilename = 22;
+  optional Type filetype = 23;
+  optional int32 filesize = 24;
+  optional int32 mtime = 25;
+  optional int32 ctime = 26;
+
+  optional int32 playcount = 27;
+  optional int32 skipcount = 28;
+  optional int32 lastplayed = 29;
+
+  optional bool suspicious_tags = 30;
+  optional string art_automatic = 31;
 
 }
 
