@@ -65,6 +65,7 @@ const QStringList OrganiseFormat::kKnownTags = QStringList() << "title"
                                                              << "extension"
                                                              << "performer"
                                                              << "grouping"
+                                                             << "lyrics"
                                                              << "originalyear";
 
 // From http://en.wikipedia.org/wiki/8.3_filename#Directory_table
@@ -200,6 +201,8 @@ QString OrganiseFormat::TagValue(const QString &tag, const Song &song) const {
     value = song.performer();
   else if (tag == "grouping")
     value = song.grouping();
+  else if (tag == "lyrics")
+    value = song.lyrics();
   else if (tag == "genre")
     value = song.genre();
   else if (tag == "comment")
